--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "cd apollo && npm run test",
-    "build": "(cd apollo && npm run build) && sam build",
+    "prebuild": "cd apollo && npm run build",
+    "build": "sam build --no-cached",
     "start": "npm run build && sam local start-api -p 4000",
     "watch": "cd apollo && npm run watch",
     "logs": "sam logs --tail",
     "logs:live": "sam logs --config-env live --tail",
-    "deploy": "npm run build && sam deploy",
+    "predeploy": "npm run build",
+    "deploy": "sam deploy",
+    "predeploy:live": "npm run build",
+    "deploy:live": "sam deploy --config-env live",
     "deploy:db": "sam deploy --config-file samconfig-dynamodb.toml",
-    "deploy:live": "npm run build && sam deploy --config-env live",
     "deploy:db:live": "sam deploy --config-file samconfig-dynamodb.toml --config-env live",
     "typecheck": "(cd apollo && npm run typecheck) && (cd ../payment-service && npm run typecheck) && (cd ../auth-service && npm run typecheck) && (cd ../fastchargeapi-cli && npm run typecheck) && (cd ../gateway-service && npm run typecheck) && echo All good!",
     "precrosscheck": "npm run typecheck",
