Add TopUpPage test

--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -5,10 +5,13 @@
   "type": "module",
   "scripts": {
     "eject": "react-scripts eject",
-    "gen": "graphql-codegen --config codegen.yml",
+    "gen:ti": "ts-interface-builder --outDir=src/__generated__ ./src/ti-types/*",
+    "gen:gql": "graphql-codegen -c ./codegen.yml",
+    "gen": "npm run gen:ti && npm run gen:gql",
     "build": "npm run gen && react-scripts build",
-    "test": "npm run gen && react-scripts test",
-    "watch": "(nodemon --config ./nodemon.config.json --exec 'npm run typecheck') & (PORT=8000 BROWSER=none react-scripts start) && wait",
+    "test": "npm run gen && jest",
+    "start": "PORT=8000 BROWSER=none DEV_DOMAIN=1 react-scripts start",
+    "watch": "(nodemon --config ./nodemon.config.json --exec 'npm run typecheck') & (npm run start) && wait",
     "new-page": "node ../react-appevent-redux-tools/dist/index.js",
     "fix": "eslint --fix ./",
     "pretypecheck": "npm run gen",
