--- a/react/fastchargeapi/.env.development
+++ b/react/fastchargeapi/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_LOCAL_GRAPHQL=${LOCAL_GRAPHQL}
 REACT_APP_LOCAL_DOC=${LOCAL_DOC}
 REACT_APP_DEV_DOMAIN=${DEV_DOMAIN}
+REACT_APP_LOG=${LOG}
