--- a/react/fastchargeapi/codegen.yml
+++ b/react/fastchargeapi/codegen.yml
@@ -3,7 +3,7 @@
 documents:
   - "./src/graphql-client.ts"
   - "./src/events/*.ts"
-schema: "../../graphql-service/apollo/__generated__/Public.final.graphql"
+schema: "node_modules/graphql-service-apollo/src/__generated__/Public.final.graphql"
 generates:
   # Specify where our generated types should live.
   ./src/__generated__/gql/:
