--- a/echo-service/samconfig.toml
+++ b/echo-service/samconfig.toml
@@ -9,7 +9,7 @@ capabilities = "CAPABILITY_IAM"
 parameter_overrides = "MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
 resolve_s3 = true
 image_repositories = []
-no_fail_on_empty_changeset = true
+fail_on_empty_changeset = false
 
 [default.logs.parameters]
 stack_name = "dev-echo-service"
@@ -25,7 +25,7 @@ capabilities = "CAPABILITY_IAM"
 parameter_overrides = "MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
 resolve_s3 = true
 image_repositories = []
-no_fail_on_empty_changeset = true
+fail_on_empty_changeset = false
 
 [live.logs.parameters]
 profile = "live_fastchargeapi"
