--- a/graphql-service/samconfig.toml
+++ b/graphql-service/samconfig.toml
@@ -12,7 +12,7 @@ parameter_overrides = [
 ]
 resolve_s3 = true
 image_repositories = []
-no_fail_on_empty_changeset = true
+fail_on_empty_changeset = false
 
 [default.logs.parameters]
 stack_name = "dev-graphql-service"
@@ -34,7 +34,7 @@ parameter_overrides = [
 ]
 resolve_s3 = true
 image_repositories = []
-no_fail_on_empty_changeset = true
+fail_on_empty_changeset = false
 
 [live.logs.parameters]
 profile = "live_fastchargeapi"
