--- a/.github/aws/samconfig.toml
+++ b/.github/aws/samconfig.toml
@@ -8,4 +8,4 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM"
 image_repositories = []
 resolve_s3 = true
-no_fail_on_empty_changeset = true
+fail_on_empty_changeset = false
