--- a/react/fastchargeapi/samconfig.toml
+++ b/react/fastchargeapi/samconfig.toml
@@ -2,8 +2,8 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "dev-site-files"
-s3_prefix = "dev-site-files"
+stack_name = "dev-fastchargeapi-web"
+s3_prefix = "dev-fastchargeapi-web"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
@@ -12,14 +12,14 @@ image_repositories = []
 fail_on_empty_changeset = false
 
 [default.logs.parameters]
-stack_name = "dev-site-files"
+stack_name = "dev-fastchargeapi-web"
 
 [live]
 [live.deploy]
 [live.deploy.parameters]
 profile = "live_fastchargeapi"
-stack_name = "live-site-files"
-s3_prefix = "live-site-files"
+stack_name = "live-fastchargeapi-web"
+s3_prefix = "live-fastchargeapi-web"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
@@ -29,4 +29,4 @@ fail_on_empty_changeset = false
 
 [live.logs.parameters]
 profile = "live_fastchargeapi"
-stack_name = "live-site-files"
+stack_name = "live-fastchargeapi-web"
