--- a/fastchargeapi-cli-v2/package.json
+++ b/fastchargeapi-cli-v2/package.json
@@ -29,6 +29,7 @@
     "@types/uuid": "^9.0.8",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
+    "decimal.js-light": "^2.5.1",
     "dotenv": "^16.4.1",
     "glob": "^10.3.10",
     "graphql-service-apollo": "file:../graphql-service/apollo",
