Fix build config

--- a/auth-service/tsconfig.json
+++ b/auth-service/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../graphql-service/apollo/tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
