Fix DateTime dynamodb type transformation for Endpoint

--- a/graphql-service/apollo/codegen.yml
+++ b/graphql-service/apollo/codegen.yml
@@ -81,6 +81,7 @@ projects:
               scalars:
                 Email: string
                 Timestamp: number
+                DateTime: Date
                 NonNegativeDecimal: string
                 URL: string
                 Any: unknown
