--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -12,7 +12,7 @@
     "build": "(npm run run-ts build.ts) && sam build",
     "deploy": "npm run build && sam deploy",
     "deploy:live": "npm run build && sam deploy --config-env live",
-    "stripe": "stripe listen --forward-to https://api.v2.payment.devfastchargeapi.com/accept-stripe-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.devfastchargeapi.com/finish-stripe-onboard -e 'account.updated'",
+    "stripe:listen": "stripe listen --forward-to https://api.v2.payment.devfastchargeapi.com/accept-stripe-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.devfastchargeapi.com/finish-stripe-onboard -e 'account.updated'",
     "logs": "sam logs --tail",
     "logs:live": "sam logs --config-env live --tail",
     "prestart": "npm run build",
