--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "fastchargeapi-workspace",
   "version": "1.0.0",
   "description": "Workspace for FastchargeAPI source code.",
-  "main": "index.js",
   "scripts": {
     "run-ts": "node -r esbuild-register --loader esbuild-register/loader",
     "lint-configs": "npm run run-ts ./project-linter.ts",
@@ -22,33 +21,51 @@
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-codegen/typescript-operations": "^3.0.1",
+    "@inrupt/jest-jsdom-polyfills": "^3.2.0",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.11",
+    "@types/node-fetch": "^2.6.11",
+    "@types/object-hash": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-jest": "^29.5.0",
+    "dotenv": "^16.4.4",
     "esbuild": "^0.19.2",
-    "esbuild-jest": "^0.5.0",
     "esbuild-register": "^3.5.0",
     "eslint": "^8.47.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard-with-typescript": "^32.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jest-extended": "^2.0.0",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-rewrite-imports": "^0.0.2",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "git-detect-case-change": "^1.0.0",
     "glob": "^10.3.10",
     "graphql": "^16.7.1",
-    "jest": "^29.5.0",
-    "jest-esbuild": "^0.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-extended": "^4.0.2",
+    "jest-transform-stub": "^2.0.0",
+    "jest-transformer-svg": "^2.0.2",
     "json5": "^2.2.3",
+    "node-fetch": "^2.7.0",
     "nodeman": "^1.1.2",
+    "object-hash": "^3.0.0",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.1.1",
+    "react": "^18.2.0",
+    "ts-interface-builder": "^0.3.3",
+    "ts-interface-checker": "^1.0.2",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.3.3"
   }
 }
