Test out Typedorm using User entity

--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -32,13 +32,14 @@
     "@apollo/client": "^3.7.15",
     "@apollo/server": "^4.9.2",
     "@as-integrations/aws-lambda": "^2.0.0",
-    "@aws-sdk/client-dynamodb": "^3.258.0",
     "@aws-sdk/client-rds-data": "^3.335.0",
     "@aws-sdk/client-secrets-manager": "^3.347.1",
     "@aws-sdk/client-sqs": "^3.272.0",
     "@aws-sdk/util-dynamodb": "^3.288.0",
     "@aws/dynamodb-data-mapper": "^0.7.3",
     "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
+    "@typedorm/common": "file:../../../typedorm/typedorm-common-1.16.0-beta.3.tgz",
+    "@typedorm/core": "file:../../../typedorm/typedorm-core-1.16.0-beta.3.tgz",
     "@types/uuid": "^9.0.1",
     "chalk": "^5.2.0",
     "dataloader": "^2.1.0",
